Fix for HARMONY-1715 ([classlib][auth] javax.security.auth.login.Configuration.getConfiguration() does not throw SecurityException)
git-svn-id: https://svn.apache.org/repos/asf/incubator/harmony/enhanced/classlib/trunk@463145 13f79535-47bb-0310-9956-ffa450edef68